<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/look_at"
        android:textSize="30dp"/>

    <Button
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="1"
        android:text="@string/click"/>

    <CheckBox
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/check"
        />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="2"
        android:src="@drawable/flag"
        />
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/switch_on"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:hint="@string/type_here"
        android:inputType="textPersonName" />



</GridLayout>