<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look_at"
        android:id="@+id/textView"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="2dp"
        android:text="@string/click" />

    <CheckBox

        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="-23dp"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/check" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginTop="0dp"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton"
        android:text="@string/switch_on" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:hint="@string/type_here"
        android:inputType="textPersonName" />
</RelativeLayout>
