<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/the_list"
        android:layout_above="@+id/sendB"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendB"
        android:text="@string/send"
        android:layout_alignParentBottom="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/type"
        android:hint="@string/type_here"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/sendB"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receiveB"
        android:text="@string/receive"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>






</RelativeLayout>
